# BreadBack

./: .gitignore  README.md  main.py  pyproject.toml
ai/: ai.py  kc_bert.py  ko_electra.py  shared_config.py  testing.py
app/: main.py
app/domain/: user.py
data/: Untitled.ipynb  preprocess_data.py
data/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
kobert_tokenizer/: tokenization_kobert.py  vocab.txt
monitor/: wandb_sweep.py
web/: main.py
