[project]
name = "breadback"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.11.0",
    "datasets>=4.4.1",
    "emoji>=2.15.0",
    "optuna>=4.6.0",
    "pandas>=2.3.3",
    "soynlp>=0.0.493",
    "torch>=2.9.0",
    "transformers>=4.57.1",
    "wandb>=0.23.0",
    "weave>=0.52.17",
]
